# personal-helper-pg-20

./: README.md  pyproject.toml
src/personal_assistant/: __init__.py  addressbook.py  command_handler.py  main.py  notes.py  storage.py  validator.py
