[project]
name = "personal-assistant"
version = "1.0.0"
description = "Персональний помічник: контакти + нотатки"
requires-python = ">=3.10"

authors = [
  {name = "Nazar Marchuk", email = "nazar03uk@gmail.com"},
  {name = "Oksana Melchenko", email = "oksankajk@gmail.com"},
  {name = "Svjatoslav Cherednikov", email = "svjatoslav.cherednikov@gmail.com"},
  {name = "Vikram Ahluwalia", email = "dr.vikram.ahluwalia@gmail.com"},
  {name = "Dmytro Riabichenko", email = "riabichenko@protonmail.com"}
]

[project.scripts]
assistant = "personal_assistant.main:main"
